[package]
name = "http_download"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.32"
reqwest = { version = "0.11.11", features = [ "json", "stream" ]}
url = "2.2.2"
serde = { version = "1.0.144", features = ["derive"] }
anyhow = "1.0.62"
tokio = { version = "1.20.1", features = ["full"] }
futures-util = "0.3.23"
scan_fmt = "0.2.6"